--- a/rap_logbook.ipynb
+++ b/rap_logbook.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from filtering import Filtering\n",
+    "from filtering import TextFilter\n",
     "\n",
     "# new_csv = Filtering('translated_df_copy.csv', do_heuristic_filter=True, max_words_heuristic=10, max_diversity_heuristic=0.3, do_perplexity_filter=False, filter_out_perplexity=False)\n",
     "\n",
@@ -641,14 +641,25 @@
     "## Topic analysis\n",
     "These are the results as calculated with the testing_notebook.ipynb:\n",
     "\n",
-    "The accuracy within the vlog topic: 69.35%\n",
-    "The accuracy within the relationships topic: 79.63%\n",
-    "The accuracy within the politics topic: 45.45%\n",
-    "The accuracy within the food topic: 85.71%\n",
-    "The accuracy within the health topic: 57.14%\n",
-    "The accuracy within the beauty topic: 69.23%\n",
+    "Overall accuracy for vlog: 50.84% \n",
+    " precision: 25.15%, recall: 69.35%, f1: 0.37\n",
+    " \n",
+    "Overall accuracy for relationships: 53.51% \n",
+    " precision: 25.15%, recall: 79.63%, f1: 0.38\n",
+    " \n",
+    "Overall accuracy for politics: 91.64% \n",
+    " precision: 43.48%, recall: 45.45%, f1: 0.44\n",
+    " \n",
+    "Overall accuracy for food: 93.31% \n",
+    " precision: 60.0%, recall: 85.71%, f1: 0.71\n",
+    " \n",
+    "Overall accuracy for health: 96.32% \n",
+    " precision: 33.33%, recall: 57.14%, f1: 0.42\n",
+    " \n",
+    "Overall accuracy for beauty: 95.99% \n",
+    " precision: 81.82%, recall: 69.23%, f1: 0.75\n",
     "\n",
-    " With an average accuracy of 67.75%\n",
+    " With an average accuracy of 0.8\n",
     " \n",
     "## Sentiment analysis\n",
     "\n",
