--- a/testing_notebook.ipynb
+++ b/testing_notebook.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-13T13:31:34.419864300Z",
-     "start_time": "2025-02-13T13:31:34.407490600Z"
+     "end_time": "2025-02-16T15:46:51.926244500Z",
+     "start_time": "2025-02-16T15:46:51.920112900Z"
     }
    },
    "outputs": [],
@@ -35,12 +35,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T13:54:31.713273100Z",
-     "start_time": "2025-02-13T13:54:31.663484900Z"
+     "end_time": "2025-02-16T15:46:53.496142900Z",
+     "start_time": "2025-02-16T15:46:53.470439400Z"
     }
    },
    "id": "11cb8f3439647ecd",
-   "execution_count": 32
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -53,24 +53,37 @@
     "    df['top_roberta_class1'] = df['top_roberta_class1'].replace(roberta_classes, manual_class)\n",
     "    df['top_roberta_class2'] = df['top_roberta_class2'].replace(roberta_classes, manual_class)\n",
     "\n",
-    "    manually_labelled_as_class = df[df['manual_topic'] == manual_class]\n",
+    "    df['predicted_is_class'] = (df['top_roberta_class1'] == manual_class) | (df['top_roberta_class2'] == manual_class)\n",
+    "    df['actual_is_class'] = df['manual_topic'] == manual_class\n",
     "\n",
-    "    accuracy = manually_labelled_as_class[\n",
-    "        (manually_labelled_as_class['manual_topic'] == manually_labelled_as_class['top_roberta_class1']) |\n",
-    "        (manually_labelled_as_class['manual_topic'] == manually_labelled_as_class['top_roberta_class2'])\n",
-    "    ]\n",
+    "    # Calculate confusion matrix components\n",
+    "    tp = len(df[(df['actual_is_class']) & (df['predicted_is_class'])])\n",
+    "    tn = len(df[(~df['actual_is_class']) & (~df['predicted_is_class'])])\n",
+    "    fp = len(df[(~df['actual_is_class']) & (df['predicted_is_class'])])\n",
+    "    fn = len(df[(df['actual_is_class']) & (~df['predicted_is_class'])])\n",
     "\n",
-    "    return (f'The accuracy within the {manual_class} topic: {round((len(accuracy) / len(manually_labelled_as_class)) * 100, 2)}%'), round((len(accuracy) / len(manually_labelled_as_class)) * 100, 2)"
+    "    accuracy = (tp + tn) / (tp + tn + fp + fn)\n",
+    "    precision = tp / (tp + fp)\n",
+    "    recall = tp / (tp + fn)\n",
+    "    f1 = (2* precision * recall) / (precision + recall)\n",
+    "\n",
+    "    msg = (\n",
+    "        f\"Overall accuracy for {manual_class}: {round(accuracy * 100, 2)}% \\n \"\n",
+    "        f\"precision: {round(precision * 100, 2)}%, recall: {round(recall * 100, 2)}%, f1: {round(f1, 2)}\"\n",
+    "    )\n",
+    "    \n",
+    "    return msg, accuracy\n",
+    "    "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T15:11:47.449473200Z",
-     "start_time": "2025-02-13T15:11:47.414569900Z"
+     "end_time": "2025-02-16T16:48:39.838113900Z",
+     "start_time": "2025-02-16T16:48:39.831822500Z"
     }
    },
    "id": "b2175e9888566709",
-   "execution_count": 140
+   "execution_count": 20
   },
   {
    "cell_type": "code",
@@ -79,14 +92,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy within the vlog topic: 69.35%\n",
-      "The accuracy within the relationships topic: 79.63%\n",
-      "The accuracy within the politics topic: 45.45%\n",
-      "The accuracy within the food topic: 85.71%\n",
-      "The accuracy within the health topic: 57.14%\n",
-      "The accuracy within the beauty topic: 69.23%\n",
+      "Overall accuracy for vlog: 50.84% \n",
+      " precision: 25.15%, recall: 69.35%, f1: 0.37\n",
+      "Overall accuracy for relationships: 53.51% \n",
+      " precision: 25.15%, recall: 79.63%, f1: 0.38\n",
+      "Overall accuracy for politics: 91.64% \n",
+      " precision: 43.48%, recall: 45.45%, f1: 0.44\n",
+      "Overall accuracy for food: 93.31% \n",
+      " precision: 60.0%, recall: 85.71%, f1: 0.71\n",
+      "Overall accuracy for health: 96.32% \n",
+      " precision: 33.33%, recall: 57.14%, f1: 0.42\n",
+      "Overall accuracy for beauty: 95.99% \n",
+      " precision: 81.82%, recall: 69.23%, f1: 0.75\n",
       "\n",
-      " With an average accuracy of 67.75%\n"
+      " With an average accuracy of 0.8\n"
      ]
     }
    ],
@@ -107,37 +126,45 @@
     "    print(acc_line)\n",
     "    all_accs += acc\n",
     "    \n",
-    "print(f'\\n With an average accuracy of {round((all_accs / 6), 2)}%')\n",
+    "print(f'\\n With an average accuracy of {round((all_accs / 6), 2)}')\n",
     "    \n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T15:12:27.612544Z",
-     "start_time": "2025-02-13T15:12:27.578348600Z"
+     "end_time": "2025-02-16T16:48:40.872501700Z",
+     "start_time": "2025-02-16T16:48:40.854182100Z"
     }
    },
    "id": "6d270efa2aca2b32",
-   "execution_count": 144
+   "execution_count": 21
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall accuracy: 72.24%\n"
+     ]
+    }
+   ],
    "source": [
     "sent_conv_dict = {'pos': 'positive', 'neg': 'negative', 'neu': 'neutral'}\n",
     "df_sent = labelled_df.copy()\n",
     "\n",
-    "df_sent['manual_sent'] = df_sent['manual_sent'].replace(sent_conv_dict)"
+    "df_sent['manual_sent'] = df_sent['manual_sent'].replace(sent_conv_dict)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T14:37:14.181408Z",
-     "start_time": "2025-02-13T14:37:14.151254Z"
+     "end_time": "2025-02-16T16:15:44.005796900Z",
+     "start_time": "2025-02-16T16:15:43.998352400Z"
     }
    },
    "id": "d61fcd172c1297fc",
-   "execution_count": 118
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -154,22 +181,21 @@
    ],
    "source": [
     "for sent in sent_conv_dict.values():\n",
-    "    sent_pred_table = []\n",
+    "\n",
     "    df_with_sent = df_sent[df_sent['manual_sent'] == sent]\n",
-    "    correct = (df_with_sent['manual_sent'] == df_with_sent['sent_roberta_tweet_class']).sum()\n",
-    "    acc_sent = round((correct / len(df_with_sent)) *100, 2) \n",
-    "    print(f'The accuracy for {sent} is: {acc_sent}%')\n",
+    "    class_accuracy = (df_with_sent['manual_sent'] == df_with_sent['sent_roberta_tweet_class']).mean()\n",
+    "    print(f'The accuracy for {sent} is: {class_accuracy * 100:.2f}%')\n",
     "    "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T14:37:43.406006Z",
-     "start_time": "2025-02-13T14:37:43.379483700Z"
+     "end_time": "2025-02-16T16:16:59.280362300Z",
+     "start_time": "2025-02-16T16:16:59.274767500Z"
     }
    },
    "id": "ec8a931529485707",
-   "execution_count": 120
+   "execution_count": 16
   },
   {
    "cell_type": "code",
@@ -209,6 +235,40 @@
    },
    "id": "481066d3fff09cee",
    "execution_count": 128
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.76      0.68      0.72        95\n",
+      "     neutral       0.51      0.65      0.57        68\n",
+      "    positive       0.85      0.79      0.82       136\n",
+      "\n",
+      "    accuracy                           0.72       299\n",
+      "   macro avg       0.70      0.71      0.70       299\n",
+      "weighted avg       0.74      0.72      0.73       299\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(df_sent['manual_sent'], df_sent['sent_roberta_tweet_class']))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-16T16:18:11.021745100Z",
+     "start_time": "2025-02-16T16:18:11.007858400Z"
+    }
+   },
+   "id": "3c7bbc52aad201f0",
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
